# switch_controller

./: CMakeLists.txt  README.md  package.xml
cfg/: SwitchController.cfg
include/: base.h  controllers.h  robots.h  switch_controller.h
src/: switch_controller.cpp  switch_controller_node.cpp
src/base/: base.cpp
src/controllers/: joint_space_imp_ctrl.cpp  task_space_imp_ctrl.cpp
src/robots/: franka_panda.cpp
